--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#Home">Home</a></li>
-            <li><a href="#Aboutus">AboutUs</a></li>
+            <li><a href="#About">AboutUs</a></li>
             <li><a href="#Menu">Menu</a></li>
             <li><a href="#Contact">Contact</a></li>
         </ul>
@@ -26,7 +26,7 @@
     </header>
         
     <main>
-        <section id="home" class="hero">
+        <section id="Home" class="hero">
             <div class="hero-section">
                 <h2>Welcome to Bella Vista</h2>
                 <p>Experience the authentic taste of Italy in the heart of the city</p>
@@ -37,7 +37,7 @@
             </div>
         </section>
 
-        <section id="menu" class="menu">
+        <section id="Menu" class="menu">
             <div class="container">
                 <h2 class="section-title">Our Menu</h2>
                 <p class="section-subtitle"> Discover our carefuly crafted dishes.</p>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
         </section>
-        <section id="about" class="about">
+        <section id="About" class="about">
             <div class="container">
                 <h2 class="section-title">About Bella Vista</h2>
                 <div class="about-content">
@@ -82,7 +82,7 @@
             </div>
         </section>
 
-        <section id="contact" class="contact">
+        <section id="Contact" class="contact">
             <div class="container">
                 <h2 class="section-title">Contact US</h2>
                 <div class="contact-content">
