--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#Home">Home</a></li>
-            <li><a href="#About">AboutUs</a></li>
+            <li><a href="#Aboutus">AboutUs</a></li>
             <li><a href="#Menu">Menu</a></li>
             <li><a href="#Contact">Contact</a></li>
         </ul>
@@ -36,6 +36,7 @@
                 </div>
             </div>
         </section>
+        <a href="#Home">Home</a>
 
         <section id="Menu" class="menu">
             <div class="container">
@@ -67,7 +68,8 @@
                     </div>
                 </div>
         </section>
-        <section id="About" class="about">
+        <a href="#Menu">Menu</a>
+        <section id="Aboutus" class="about">
             <div class="container">
                 <h2 class="section-title">About Bella Vista</h2>
                 <div class="about-content">
@@ -81,6 +83,7 @@
                 </div>
             </div>
         </section>
+        <a href="#Aboutus">AboutUs</a>
 
         <section id="Contact" class="contact">
             <div class="container">
@@ -162,6 +165,7 @@
                 </div>
             </div>
         </section>
+        <a href="#Contact">Contact</a>
     </main>
 
     <footer class="footer">
