--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                         <div class="menu-items">
                              <div class="menu-item">
                                 <div class="menu-item-info">
-                                    <h4>Calamari</h4>
-                                    <p>Lightly breaded and fried. Served with lemon wedges amd marinara sauce </p>
+                                    <h4>Garlic bread</h4>
+                                    <p> With melted parmesan cheese and a special blend of herbs and spices. </p>
                                 </div>
-                                <span class="price">$18</span>
+                                <span class="price">$12</span>
                              </div>
-
+                            
                              <div class="menu-item">
                                 <div class="menu-item-info">
                                     <h4>Calamari</h4>
@@ -214,3 +214,4 @@
     
 </body>
 </html>
+
